--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     environment:
       TZ: "Europe/Amsterdam"
       MYSQL_ROOT_PASSWORD: "rood"
+      # change this to something secure when in production
       MYSQL_DATABASE: "opvang"
       
 volumes:
