--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
     ports:
-      - 8082:80
+      - 80:80
     volumes: 
       - ./www:/var/www/html
     environment:
@@ -17,8 +17,8 @@ services:
        - mariavol:/var/lib/mysql
     environment:
       TZ: "Europe/Amsterdam"
-      MYSQL_ROOT_PASSWORD: "rood"
-      # change this to something secure when in production
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWD:-rood}
+      # overrid this to something secure when in production, with env variables or .env file
       MYSQL_DATABASE: "opvang"
       
 volumes:
